--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=desafio-itau
-management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=health, prometheus
 
 springdoc.show-actuator=true
+
